# RoomSlotBot

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: aca32f3d4ecd_initial_migration.py
src/pingslot/: config.py  db.py  main.py  models.py  result.py
src/pingslot/bot/: base.py  manager.py
src/pingslot/service/: booking.py
src/pingslot/services/: booking.py
